--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Jiamiao XU"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  bio              : "A student engaged with economic studies and social issues"
+  location         : "Beijing"
+  employer         : "Renmin University"
+  uri              : https://jasonjiamiaoxu.github.io
+  email            : "xujiamiao@ruc.edu.cn" 
 
   # Academic websites
   academia         : # URL
